Fixed some layout issue

--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,7 +1,16 @@
 .brand-link {
     text-decoration: none !important; /* Remove text underline */
   }
-  
+
+  .content-header h1 {
+    margin-top: 20px; /* Adjust to match the admin dashboard */
+}
+
+  .row .col-lg-3 {
+    margin-bottom: 3px; /* Add margin below each widget for spacing */
+}
+
+
 .card-header .card-title {
     margin-bottom: 0; /* Remove any extra bottom margin */
 }
@@ -54,25 +63,3 @@ border-color: #138496;
     margin-left: 0;
     padding-left: 0;
   }
-  
-  .small-box.bg-info {
-    background-color: #17a2b8; /* Teal */
-    color: #fff; /* White text */
-}
-
-.small-box.bg-success {
-    background-color: #28a745; /* Green */
-    color: #fff; /* White text */
-}
-
-.small-box.bg-warning {
-    background-color: #ffc107; /* Yellow */
-    color: #212529; /* Dark text */
-}
-
-.small-box.bg-secondary {
-    background-color: #6c757d; /* Gray */
-    color: #fff; /* White text */
-}
-
-  
